"Added a button event handler that dispays a dialog box and set conditions for the date picker.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<legend>General Information</legend>
 				<div>
 					<label for="arrival_date">Arrival date:</label>
-					<input type="text" name="arrival_date" id="arrival_date" autofocus>
+					<input type="text" name="arrival_date" id="datepicker" autofocus>
 					<span>*</span>
 				</div>
 				<div>
